# peerstyle

./: .gitignore  404.html  README.md  add to path.bat  custom_style.mplstyle  index.html  mkdocs.yml  plot_styling.py  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
changelog/: index.html
docs/: api.md  changelog.md  examples.md  faq.md  index.md  styles.md
examples/: index.html
faq/: index.html
search/: search_index.json
src/peerstyle/: __init__.py  _curved_text.py  preview.py
src/peerstyle/styles/: bright.mplstyle  custom_style.mplstyle  despine.mplstyle  grayscale.mplstyle  ieee.mplstyle  muted.mplstyle  nature.mplstyle  no-latex.mplstyle  notebook.mplstyle  poster.mplstyle
src/plot_styling/: __init__.py  preview.py
src/plot_styling/styles/: custom_style.mplstyle  poster.mplstyle
src/scistyle/: __init__.py  preview.py
src/scistyle/styles/: ieee.mplstyle  nature.mplstyle
styles/: index.html
tests/: test_styles.py
