[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plot-styling"
version = "0.1.0"
description = "A custom Matplotlib styling package for scientific plots."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/plot_styling"

[tool.hatch.build.targets.wheel]
packages = ["src/plot_styling"]

[tool.hatch.build.targets.sdist]
include = [
    "src/plot_styling/styles/*.mplstyle",
]
