[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peerstyle"
version = "0.1.2"
description = "Publication-quality Matplotlib styling for peer-reviewed journals."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Javad Esmaeelpour", email = "jvd.esm@gmail.com"},
]
keywords = ["matplotlib", "style", "scientific-plotting", "ieee", "nature", "peer-review"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/Esmaeelpour/peerstyle"
Repository = "https://github.com/Esmaeelpour/peerstyle"
Issues = "https://github.com/Esmaeelpour/peerstyle/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/peerstyle"]

[tool.hatch.build.targets.sdist]
include = [
    "src/peerstyle/styles/*.mplstyle",
    "README.md",
    "LICENSE",
]
